import { render, screen, fireEvent } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Avatar } from './avatar';

describe('Avatar', () => {
  const renderBasicAvatar = (props = {}) => {
    return render(
      <Avatar data-testid="avatar" {...props}>
        Test content
      </Avatar>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicAvatar();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches loading state snapshot', () => {
      const { container } = renderBasicAvatar({ loading: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicAvatar();
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

  });




  describe('States', () => {
    it('handles loading state correctly', () => {
      renderBasicAvatar({ loading: true });
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading state
    });
  });




  describe('Props', () => {
    it('handles src prop correctly', () => {
      renderBasicAvatar({ src: "test-value" });
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for src prop
    });
    it('handles alt prop correctly', () => {
      renderBasicAvatar({ alt: "test-value" });
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for alt prop
    });
    it('handles fallback prop correctly', () => {
      renderBasicAvatar({ fallback: "test-value" });
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for fallback prop
    });
    it('handles loading prop correctly', () => {
      renderBasicAvatar({ loading: true });
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for loading prop
    });
    it('handles status prop correctly', () => {
      renderBasicAvatar({ status: "test-value" });
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific assertions for status prop
    });
  });

  describe('Accessibility', () => {
    it.skip('can be focused - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('has proper ARIA attributes', () => {
      renderBasicAvatar();
      const element = screen.getByTestId('avatar');
      expect(element).toBeInTheDocument();
      // TODO: Add specific ARIA attribute tests based on component type
    });

    it.skip('supports keyboard navigation - SKIPPED: Non-focusable element', () => {
      // This element cannot receive focus (div/span/table)
      // Focus tests disabled for accessibility accuracy
      expect(true).toBe(true);
    });

    it('announces changes to screen readers', () => {
      renderBasicAvatar();
      // TODO: Add screen reader announcement tests
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicAvatar();
      // TODO: Add reduced motion tests
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      renderBasicAvatar({ className: 'custom-class' });
      const element = screen.getByTestId('avatar');
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicAvatar({ ref });
      // Ref forwarding test - environment dependent
    // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      renderBasicAvatar({ 'data-custom': 'test-value' });
      const element = screen.getByTestId('avatar');
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicAvatar({ children: undefined });
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicAvatar({ children: null });
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicAvatar({ className: '' });
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender } = renderBasicAvatar({ className: 'class1' });
      rerender(<Avatar data-testid="avatar" className="class2" />);
      const element = screen.getByTestId('avatar');
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Avatar data-testid="avatar">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Avatar>
      );
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Avatar data-testid="avatar">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Avatar>
      );
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicAvatar();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicAvatar();
      unmount();
      renderBasicAvatar();
      expect(screen.getByTestId('avatar')).toBeInTheDocument();
    });
  });
});

// TODO: Review and customize generated tests based on component-specific requirements
// TODO: Add component-specific interaction tests
// TODO: Verify all variant combinations work correctly
// TODO: Test integration with form libraries if applicable
// TODO: Add performance tests for complex components
